--- a/DiceRoller/app/src/main/res/values/strings.xml
+++ b/DiceRoller/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dice Roller</string>
     <string name="roll">ROLL</string>
+    <string name="login_to_save_history">Login to Save History</string>
+    <string name="logout">Logout</string>
 </resources>
