--- a/DiceRoller/app/src/main/res/values/strings.xml
+++ b/DiceRoller/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="roll">ROLL</string>
     <string name="login_to_save_history">Login to Save History</string>
     <string name="logout">Logout</string>
+    <string name="clear">Clear</string>
 </resources>
